@@ -41,6 +41,7 @@ Version 1.7.2+svn:
    * wmllint updated to accomodate new drake names. Gladiator changes must
      still be done by hand.
    * No longer "crash" upon invalid pango markup
+   * It's now possible to display the area a widget uses, for debug purposes
 
 Version 1.7.2:
  * Campaigns:
